# PrimeChecker_06

./: CMakeLists.txt  lcov.info
include/: PrimeChecker.h
src/: PrimeChecker.cpp  main.cpp
tests/: PrimeCheckerTest.cpp
